# Gigamonkey

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.test  Stratum.md  conanfile.py  readme.md  secret_share.cpp  table.html
.devcontainer/: Dockerfile  devcontainer.json
.github/test-action/: action.yml
.github/workflows/: commit-builds.yml  conan.yml  prcheck-build.yml  stable-builds.yml  stable.yml  test_results.yml  tests.yml  tests.yml.disabled
cmake/: FindCryptoPP.cmake  FindGMP.cmake  FindNTL.cmake  FindSECP256K1.cmake
include/: Gigamonkey.hpp  bitcoin.hpp
include/bitcoin/: address.hpp  hash.hpp  keys.hpp  redeem.hpp  script.hpp  secp256k1.hpp  signature.hpp  spendable.hpp  timechain.hpp  transaction.hpp  txid.hpp  types.hpp  wif.hpp  work.hpp
include/btcpool/: difficulty.hpp
include/gigamonkey/: SPV.hpp  accounts.hpp  address.hpp  big_num.hpp  coinbase.hpp  fees.hpp  hash.hpp  incomplete.hpp  ledger.hpp  merkle.hpp  number.hpp  redeem.hpp  satoshi.hpp  script.hpp  secp256k1.hpp  sighash.hpp  signature.hpp  spendable.hpp  spv.hpp  timechain.hpp  timestamp.hpp  txid.hpp  types.hpp  wallet.hpp  wif.hpp  work.hpp
include/sv/: amount.h  arith_uint256.h  big_int.h  chain.h  coins.h  compat.h  compressor.h  config.h  core_memusage.h  hash.h  httpserver.h  key.h  memusage.h  prevector.h  pubkey.h  random.h  script_config.h  serialize.h  span.h  streams.h  taskcancellation.h  thread_safe_queue.h  txhasher.h  uint256.h  util.h  utilstrencodings.h  validation.h  version.h
src/: CMakeLists.txt
src/bitcoin/: address.cpp  (+2 more)
src/gigamonkey/: CMakeLists.txt  Config.cmake.in  SPV.cpp  accounts.cpp  address.cpp  boost_miner.cpp  hash.cpp  incomplete.cpp  ledger.cpp  merkle.cpp  number.cpp  numbers.cpp  redeem.cpp  script.cpp  secp256k1.cpp  sighash.cpp  signature.cpp  spv.cpp  timechain.cpp  timestamp.cpp  types.cpp  wallet.cpp  wif.cpp  work.cpp
src/gigamonkey/boost/: boost.cpp
src/gigamonkey/ecies/: bitcore.cpp  electrum.cpp
src/gigamonkey/include/: Gigamonkey.hpp
src/gigamonkey/include/gigamonkey/: SPV.hpp  address.hpp  coinbase.hpp  fees.hpp  hash.hpp  incomplete.hpp  numbers.hpp  redeem.hpp  satoshi.hpp  script.hpp  secp256k1.hpp  sighash.hpp  signature.hpp  teranode.hpp  timechain.hpp  timestamp.hpp  types.hpp  version.hpp.in  wif.hpp
src/gigamonkey/include/gigamonkey/boost/: boost.hpp
src/gigamonkey/include/gigamonkey/ecies/: bitcore.hpp  electrum.hpp
src/gigamonkey/include/gigamonkey/merkle/: BUMP.hpp  dual.hpp  proof.hpp  serialize.hpp  tree.hpp
src/gigamonkey/include/gigamonkey/p2p/: addr.hpp  checksum.hpp  command.hpp  empty.hpp  inv.hpp  message.hpp  net_address.hpp  pingpong.hpp  var_int.hpp  version.hpp
src/gigamonkey/include/gigamonkey/pay/: ARC.hpp  BEEF.hpp  MAPI.hpp  SPV_envelope.hpp  envelope.hpp  extended.hpp  pay.hpp
src/gigamonkey/include/gigamonkey/schema/: bip_39.hpp  bip_44.hpp  electrum_sv.hpp  hd.hpp  random.hpp
src/gigamonkey/include/gigamonkey/script/: config.hpp  counter.hpp  error.h  flags.h  instruction.hpp  interpreter.hpp  machine.hpp  opcodes.h  pattern.hpp  program.hpp  stack.hpp
src/gigamonkey/include/gigamonkey/script/pattern/: multisig.hpp  op_return.hpp  pay_to_address.hpp  pay_to_hash.hpp  pay_to_pubkey.hpp  pay_to_script_hash.hpp
src/gigamonkey/include/gigamonkey/stratum/: client_get_version.hpp  client_session.hpp  difficulty.hpp  error.hpp  extensions.hpp  message_id.hpp  method.hpp  mining_authorize.hpp  mining_configure.hpp  mining_notify.hpp  mining_set_version_mask.hpp  mining_submit.hpp  mining_subscribe.hpp  remote.hpp  server_session.hpp  session_id.hpp
src/gigamonkey/include/gigamonkey/work/: proof.hpp  solver.hpp  string.hpp  target.hpp
src/gigamonkey/mapi/: envelope.cpp  mapi.cpp
src/gigamonkey/merkle/: BUMP.cpp  dual.cpp  serialize.cpp
src/gigamonkey/p2p/: address.cpp  association_id.cpp  checksum.cpp  header_string.cpp  networks.cpp  node.cpp  node_manager.cpp  session.cpp  var_int.cpp  var_util.cpp  version.cpp
src/gigamonkey/p2p/messages/: message.cpp  messageHeader.cpp  message_header.cpp  message_payload.cpp  utils.cpp
src/gigamonkey/pay/: ARC.cpp  BEEF.cpp  MAPI.cpp  SPV_envelope.cpp  envelope.cpp  extended.cpp
src/gigamonkey/schema/: bip_39.cpp  electrum.cpp  electrum_SV.cpp  hd.cpp  hd_wallet_formats.cpp  random.cpp
src/gigamonkey/script/: config.cpp  counter.cpp  error.cpp  instruction.cpp  interpreter.cpp  machine.cpp  op_return_data.cpp  opcodes.cpp  pattern.cpp  script.cpp  stack.cpp  typed_data_bip_276.cpp
src/gigamonkey/stratum/: boolean_response.cpp  client.cpp  client_session.cpp  difficulty.cpp  error.cpp  extensions.cpp  json_bi_stream.cpp  method.cpp  miner.cpp  mining.cpp  mining_authorize.cpp  mining_configure.cpp  mining_notify.cpp  mining_subscribe.cpp  remote.cpp  server_session.cpp  stratum.cpp
src/sv/: CMakeLists.txt  arith_uint256.cpp  big_int.cpp  config.cpp  pubkey.cpp  random.cpp  utilstrencodings.cpp
src/sv/crypto/: ripemd160.cpp  sha1.cpp  sha256.cpp
src/sv/include/sv/: util.h  utiltime.h
src/sv/include/sv/consensus/: consensus.h
src/sv/policy/: policy.cpp
src/sv/primitives/: transaction.cpp
src/sv/script/: interpreter.cpp  limitedstack.cpp  opcodes.cpp  script.cpp  script_error.cpp  script_num.cpp
src/sv/support/: cleanse.cpp
test/: BEEF.cpp  BIP32.cpp  BIP32Derivations.cpp  BIP39.cpp  BUMP.cpp  CMakeLists.txt  Merkle.cpp  SPV.cpp  Stratum.cpp  address.cpp  base_58_check.cpp  boost.cpp  difficulty.cpp  dot_cross.hpp  expand_compact.cpp  format.cpp  number.cpp  push.cpp  script.cpp  signature.cpp  stack.cpp  testAddress.cpp  testBEEF.cpp  testBUMP.cpp  testBase58.cpp  testBase58Check.cpp  testBip32.cpp  testBip32Derivations.cpp  testBip39.cpp  testBoost.cpp  testDifficulty.cpp  testDigest.cpp  testECIES.cpp  testElectrum.cpp  testExpandCompact.cpp  testFormat.cpp  testGenesis.cpp  testLib.cpp  testMerkle.cpp  testNumber.cpp  (+17 more)
test/p2p/: CMakeLists.txt  TestAddressManager.cpp  TestAddressManager.hpp  testAddresses.cpp  testMessage.cpp  testNode.cpp  testP2p.cpp  testVersionPayload.cpp
(+145 files in other folders)
